# RaspberryPi-Cross-Compilation-Template

./: .gitignore  CMakeLists.txt  README.md  build-dependencies.sh  build.sh
